# pyntp

./: LICENSE  README.md  pyproject.toml  requirements.txt  test_ntp.py
docs/: old-readme.md
pyntp/: __init__.py  ntp_time.py
src/pyntp/: ntp.py
