[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyntp"
version = "0.1.1"
authors = [
  { name="Thomaz Pougy", email="thomazpougy@gmail.com" },
]
description = "Python library for accurate time from NTP servers with threaded and synchronous modes."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Verifique se o arquivo LICENSE corresponde
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking :: Time Synchronization",
]
dependencies = [
    "iter-backoff",
    "ntplib>=0.4.0",
]

[project.urls]
"Homepage" = "https://github.com/tpougy/pyntp" # Substitua pelo URL real
"Bug Tracker" = "https://github.com/tpougy/pyntp/issues" # Substitua
"Original Package" = "https://pypi.org/project/ntp-time/"

[tool.setuptools]
packages = ["pyntp"]
